--- a/index.html
+++ b/index.html
@@ -9,46 +9,45 @@
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
+        :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 15px; color: var(--text-main); overflow-x: hidden; }
-        #auth-screen { position: fixed; inset: 0; background: var(--bg); z-index: 9000; display: flex; align-items: center; justify-content: center; }
-        .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 90%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
-        .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 12px; outline: none; box-sizing: border-box; }
-        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; }
         .glass-card { background: var(--card-bg); border-radius: 20px; padding: 20px; border: 1px solid var(--border); margin-bottom: 15px; }
-        .cat-item { cursor: pointer; background: #0f172a; padding: 12px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 8px; font-size: 13px; }
+        .stat-card { padding: 15px; border-radius: 15px; color: white; text-align: center; cursor: pointer; }
+        .stat-card h4 { font-size: 10px; margin: 0; opacity: 0.8; text-transform: uppercase; }
+        .stat-card p { font-size: 22px; margin: 5px 0 0; font-weight: 800; }
         .book-item { background: #0f172a; padding: 15px; border-radius: 15px; border: 1px solid var(--border); margin-bottom: 12px; }
         .btn-preview { background: var(--blue); color: white; border: none; padding: 10px 15px; border-radius: 8px; cursor: pointer; font-size: 11px; font-weight: 600; margin-top: 10px; }
-        #reader-overlay, #full-lib-view { position: fixed; inset: 0; z-index: 9999; background: var(--bg); display: flex; flex-direction: column; padding: 20px; overflow-y: auto; }
+        #auth-screen, #profile-overlay, #reader-overlay, #full-lib-view, #borrow-view { position: fixed; inset: 0; z-index: 9000; background: var(--bg); display: flex; flex-direction: column; padding: 20px; }
         .hidden { display: none !important; }
+        .cat-item { cursor: pointer; background: #0f172a; padding: 12px; border-radius: 12px; border: 1px solid var(--border); margin-bottom: 8px; font-size: 13px; }
     </style>
 </head>
 <body>
 
     <div id="auth-screen">
-        <div class="login-card">
-            <h2 style="color:var(--blue); margin-bottom:20px;">TheoLib Login</h2>
-            <select id="login-role"><option value="student">Student</option><option value="faculty">Faculty</option></select>
-            <input type="text" id="login-coll-id" class="login-field" placeholder="College ID">
-            <input type="text" id="login-user-id" class="login-field" placeholder="User ID">
-            <input type="password" id="login-pass" class="login-field" placeholder="Password">
-            <button onclick="handleLogin()" style="background:var(--blue); color:white; border:none; width:100%; padding:15px; border-radius:12px; font-weight:600; cursor:pointer;">Enter Library</button>
+        <div style="background:var(--card-bg); padding:30px; border-radius:24px; text-align:center; max-width:350px; margin:auto; border:1px solid var(--border);">
+            <h2 style="color:var(--blue)">TheoLib Login</h2>
+            <select id="login-role" style="width:100%; padding:12px; margin-bottom:12px; background:var(--bg); color:white; border-radius:8px;"><option value="student">Student</option><option value="faculty">Faculty</option></select>
+            <input type="text" id="login-coll-id" style="width:100%; padding:12px; margin-bottom:12px; background:var(--bg); color:white; border-radius:8px;" placeholder="College ID">
+            <input type="text" id="login-user-id" style="width:100%; padding:12px; margin-bottom:12px; background:var(--bg); color:white; border-radius:8px;" placeholder="User ID">
+            <input type="password" id="login-pass" style="width:100%; padding:12px; margin-bottom:12px; background:var(--bg); color:white; border-radius:8px;" placeholder="Password">
+            <button onclick="handleLogin()" style="background:var(--blue); color:white; width:100%; padding:15px; border-radius:12px; font-weight:600; cursor:pointer;">Enter</button>
         </div>
     </div>
 
     <div id="dashboard" class="hidden">
-        <div class="status-grid" style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-bottom:20px;">
-            <div class="stat-card" style="background:var(--blue)" onclick="showFullLibrary()"><h4>Books</h4><p id="top-total">0</p></div>
-            <div class="stat-card" style="background:var(--orange)"><h4>Borrowed</h4><p id="top-issued">0</p></div>
-            <div class="stat-card" style="background:var(--green)" onclick="alert('Profile Loading...')"><h4>Profile</h4><p>👤</p></div>
+        <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap:10px; margin-bottom:20px;">
+            <div class="stat-card" style="background:var(--blue)" onclick="showFullLibrary()"><h4>All Books</h4><p id="top-total">0</p></div>
+            <div class="stat-card" style="background:var(--orange)" onclick="showBorrowView()"><h4>Borrowed</h4><p id="top-issued">0</p></div>
+            <div class="stat-card" style="background:var(--purple)" onclick="toggleProfile()"><h4>Profile</h4><p id="mini-initial">U</p></div>
         </div>
 
-        <div style="display:grid; grid-template-columns: 2fr 1fr; gap: 20px;">
-            <div class="content">
+        <div style="display:grid; grid-template-columns: 2fr 1.2fr; gap: 15px;">
+            <div>
                 <div class="glass-card"><h3 style="color:var(--green); margin-top:0;">🌍 Mission Focus</h3><div id="mission-list"></div></div>
                 <div class="glass-card"><h3>🕒 Recent Resources</h3><div id="recent-list"></div></div>
             </div>
-            <div class="sidebar">
+            <div>
                 <div class="glass-card">
                     <h3>📂 Categories</h3>
                     <div class="cat-item" onclick="loadCat('Theology')">📖 Systematic Theology</div>
@@ -62,12 +61,19 @@
         </div>
     </div>
 
-    <div id="reader-overlay" class="hidden">
-        <button onclick="closeReader()" style="background:red; color:white; padding:10px;">Exit</button>
-        <iframe id="pdf-frame" style="width:100%; height:100%;"></iframe>
+    <div id="profile-overlay" class="hidden">
+        <div class="glass-card" style="max-width:350px; margin:auto; text-align:center;">
+            <h2 id="prof-name">Name</h2>
+            <p id="p-role" style="color:var(--blue); font-weight:800;"></p>
+            <p style="text-align:left;"><b>ID:</b> <span id="p-stud-id"></span></p>
+            <button onclick="toggleProfile()" class="btn-preview">Back</button>
+            <button onclick="location.reload()" style="background:red; width:100%; margin-top:10px;" class="btn-preview">Logout</button>
+        </div>
     </div>
 
-    <div id="full-lib-view" class="hidden"><button onclick="closeView('full-lib-view')">Back</button><div id="full-book-list"></div></div>
+    <div id="full-lib-view" class="hidden"><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button><div id="full-book-list"></div></div>
+    <div id="borrow-view" class="hidden"><button onclick="closeView('borrow-view')" class="btn-preview">Back</button><div id="borrow-list"></div></div>
+    <div id="reader-overlay" class="hidden"><button onclick="closeReader()" style="background:red; color:white;">Exit</button><iframe id="pdf-frame" style="width:100%; height:100%;"></iframe></div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
@@ -82,51 +88,60 @@
             const pass = document.getElementById('login-pass').value.trim();
             const snap = await db.collection("users").where("collegeId","==",collId).where("studentId","==",userId).where("password","==",pass).get();
             if(!snap.empty) {
-                currentUser = { uid: snap.docs[0].id, ...snap.docs[0].data() };
+                const u = snap.docs[0].data();
+                if((u.role || 'student') !== role) { alert("Wrong Role Selected"); return; }
+                currentUser = { uid: snap.docs[0].id, ...u };
                 document.getElementById('auth-screen').classList.add('hidden');
                 document.getElementById('dashboard').classList.remove('hidden');
-                loadLib();
+                loadLib(); listenBorrows();
             } else { alert("Error"); }
         }
 
         function loadLib() {
             db.collection("library_settings").where("allowedColleges","array-contains",currentUser.collegeId).onSnapshot(snap => {
-                const list = document.getElementById('recent-list'); 
-                const mis = document.getElementById('mission-list');
-                list.innerHTML = ""; mis.innerHTML = ""; collegeBooks = [];
+                const recent = document.getElementById('recent-list'); const mission = document.getElementById('mission-list');
+                const full = document.getElementById('full-book-list');
+                recent.innerHTML = ""; mission.innerHTML = ""; full.innerHTML = ""; collegeBooks = [];
                 snap.forEach(doc => {
-                    const b = doc.data(); collegeBooks.push({id: doc.id, ...b});
-                    const recBtn = (currentUser.role === 'faculty') ? `<button onclick="facRec('${doc.id}','${b.title}')">Recommend</button>` : '';
-                    const html = `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdf('${doc.id}')">Preview</button>${recBtn}</div>`;
-                    list.innerHTML += html;
-                    if(b.mission) mis.innerHTML += html;
+                    const b = doc.data(); const id = doc.id;
+                    collegeBooks.push({id, ...b});
+                    const recBtn = (currentUser.role === 'faculty') ? `<button class="btn-preview" style="background:var(--orange)" onclick="facRec('${id}','${b.title}')">Recommend</button>` : '';
+                    const html = `<div class="book-item"><b>${b.title}</b><div style="display:flex; gap:5px;"><button class="btn-preview" onclick="openPdf('${id}')">Preview</button><button class="btn-preview" style="background:#475569" onclick="borrowB('${id}','${b.title}')">Borrow</button>${recBtn}</div></div>`;
+                    recent.innerHTML += html; full.innerHTML += html;
+                    if(b.mission) mission.innerHTML += html;
                 });
                 document.getElementById('top-total').innerText = snap.size;
             });
         }
 
-        async function facRec(bid, title) {
-            await db.collection("faculty_nominations").add({ bookId: bid, bookTitle: title, facultyName: currentUser.fullName, collegeId: currentUser.collegeId, status: "pending", timestamp: new Date().toISOString() });
-            alert("Sent!");
+        function listenBorrows() {
+            db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
+                const list = document.getElementById('borrow-list'); list.innerHTML = "";
+                snap.forEach(doc => { list.innerHTML += `<div class="book-item"><b>${doc.data().title}</b><button class="btn-preview" onclick="openPdf('${doc.data().bookId}')">Open</button></div>`; });
+                document.getElementById('top-issued').innerText = snap.size;
+            });
         }
 
-        function openPdf(id) {
-            const url = `${window.location.origin}/public/${encodeURIComponent(id)}_read_online.pdf`;
-            document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${url}&embedded=true`;
-            document.getElementById('reader-overlay').classList.remove('hidden');
+        async function facRec(bid, title) { await db.collection("faculty_nominations").add({ bookId: bid, bookTitle: title, facultyName: currentUser.fullName, collegeId: currentUser.collegeId, status: "pending", timestamp: new Date().toISOString() }); alert("Sent!"); }
+        function openPdf(id) { document.getElementById('pdf-frame').src = `https://docs.google.com/viewer?url=${window.location.origin}/public/${id}_read_online.pdf&embedded=true`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        function toggleProfile() { 
+            document.getElementById('prof-name').innerText = currentUser.fullName;
+            document.getElementById('p-role').innerText = currentUser.role.toUpperCase();
+            document.getElementById('p-stud-id').innerText = currentUser.studentId;
+            document.getElementById('profile-overlay').classList.toggle('hidden'); 
         }
-
+        function showFullLibrary() { document.getElementById('full-lib-view').classList.remove('hidden'); }
+        function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
+        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
+        function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); }
         function loadCat(cat) {
             const list = document.getElementById('full-book-list'); list.innerHTML = "";
             collegeBooks.filter(b => b.category === cat).forEach(b => {
-                list.innerHTML += `<div class="book-item"><b>${b.title}</b><br><button onclick="openPdf('${b.id}')">Preview</button></div>`;
+                list.innerHTML += `<div class="book-item"><b>${b.title}</b><button class="btn-preview" onclick="openPdf('${b.id}')">Preview</button></div>`;
             });
-            document.getElementById('full-lib-view').classList.remove('hidden');
+            showFullLibrary();
         }
-
-        function closeReader() { document.getElementById('reader-overlay').classList.add('hidden'); document.getElementById('pdf-frame').src = ""; }
-        function showFullLibrary() { document.getElementById('full-lib-view').classList.remove('hidden'); }
-        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
+        async function borrowB(id, t) { if(prompt("Code:") === "BORROW2026") await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, borrowedAt: new Date().toISOString() }); }
     </script>
 </body>
 </html>
