--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
         :root { --blue: #3b82f6; --orange: #f97316; --green: #10b981; --purple: #a855f7; --bg: #0b1120; --card-bg: #1e293b; --text-main: #f8fafc; --text-sub: #94a3b8; --border: #334155; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 20px; color: var(--text-main); }
         #auth-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; align-items: center; justify-content: center; }
-        .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 90%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
+        .login-card { background: var(--card-bg); padding: 30px; border-radius: 24px; width: 100%; max-width: 350px; text-align: center; border: 1px solid var(--border); }
         .login-field, select { width: 100%; padding: 12px; border-radius: 10px; border: 1px solid var(--border); background: var(--bg); color: white; margin-bottom: 15px; outline: none; box-sizing: border-box; font-family: inherit; }
         .nav-tabs { display: flex; gap: 10px; margin-bottom: 25px; overflow-x: auto; padding-bottom: 10px; border-bottom: 1px solid var(--border); }
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: var(--card-bg); color: var(--text-sub); transition: 0.3s; white-space: nowrap; }
@@ -63,7 +63,7 @@
 
     <div id="inv-section" class="glass-card">
         <div class="search-container">
-            <input type="text" id="inv-search" class="search-bar" placeholder="🔍 Search book title... (Press Enter for results)" 
+            <input type="text" id="inv-search" class="search-bar" placeholder="🔍 Search book title... (Press Enter for full results)" 
                 oninput="handleSearchInput(this.value)" 
                 onkeydown="if(event.key==='Enter') triggerSearchPopUp(this.value)">
             <div id="search-suggestions" class="hidden"></div>
@@ -119,7 +119,6 @@
     }
 
     function initAdmin() {
-        // Fix: Ensure fullInventory is loaded before search starts
         db.collection("library_settings").onSnapshot(snap => {
             fullInventory = [];
             const list = document.getElementById('inventory-list'); list.innerHTML = "";
@@ -127,7 +126,7 @@
                 const b = doc.data(); const id = doc.id;
                 fullInventory.push({ id, ...b });
                 const allowed = b.allowedColleges || [];
-                list.innerHTML += `<tr><td><b>${b.title}</b><br><small>${b.category || 'None'}</small></td><td><small>${allowed.join(', ')}</small></td><td style="position:relative;"><button class="btn-sm" style="background:var(--purple); color:white;" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div><button class="btn-sm" style="background:var(--green); color:white;" onclick="toggleM('c-${id}')">Category</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updateField('${id}','category','Theology')">Theology</div><div class="dropdown-item" onclick="updateField('${id}','category','Church History')">Church History</div><div class="dropdown-item" onclick="updateField('${id}','category','Mission')">Mission</div><div class="dropdown-item" onclick="updateField('${id}','category','Other Books')">Other Books</div></div><button class="btn-sm" style="background:var(--orange); color:white;" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updateField('${id}','recent',${!b.recent})">Recent: ${b.recent?'✅':'OFF'}</div><div class="dropdown-item" onclick="updateField('${id}','trending',${!b.trending})">Trending: ${b.trending?'✅':'OFF'}</div></div></td><td><button class="btn-sm" style="background:#ef4444; color:white;" onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
+                list.innerHTML += `<tr><td><b>${b.title}</b><br><small>${b.category || 'None'}</small></td><td><small>${allowed.join(', ')}</small></td><td style="position:relative;"><button class="btn-sm" style="background:var(--purple); color:white;" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div><button class="btn-sm" style="background:var(--green); color:white;" onclick="toggleM('c-${id}')">Category</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updateField('${id}','category','Theology')">Theology</div><div class="dropdown-item" onclick="updateField('${id}','category','Church History')">Church History</div><div class="dropdown-item" onclick="updateField('${id}','category','Mission')">Mission Focus</div><div class="dropdown-item" onclick="updateField('${id}','category','Other Books')">Other Books</div></div><button class="btn-sm" style="background:var(--orange); color:white;" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updateField('${id}','recent',${!b.recent})">Recent: ${b.recent?'✅':'OFF'}</div><div class="dropdown-item" onclick="updateField('${id}','trending',${!b.trending})">Trending: ${b.trending?'✅':'OFF'}</div></div></td><td><button class="btn-sm" style="background:#ef4444; color:white;" onclick="deletePDF('${id}')">🗑️</button></td></tr>`;
             });
         });
         
@@ -137,7 +136,6 @@
         });
     }
 
-    // --- Search Fix ---
     function handleSearchInput(val) {
         const suggestions = document.getElementById('search-suggestions');
         if (!val.trim()) { suggestions.classList.add('hidden'); return; }
@@ -158,24 +156,25 @@
         document.getElementById('search-results-popup').classList.remove('hidden');
     }
 
-    // --- Management Fix (Loading Members) ---
-    async function loadCollegeStudents(cid) {
+    function loadCollegeStudents(cid) {
         if(!cid) return;
         const list = document.getElementById('user-folders-list');
-        list.innerHTML = "Loading...";
-        try {
-            const snap = await db.collection("users").where("collegeId", "==", cid).get();
-            list.innerHTML = snap.empty ? "No members found." : "";
+        list.innerHTML = "Loading members...";
+        // Fix: Use onSnapshot for more reliable loading in Management tab
+        db.collection("users").where("collegeId", "==", cid).onSnapshot(snap => {
+            list.innerHTML = snap.empty ? "No members found in this college." : "";
             snap.forEach(doc => {
                 const u = doc.data();
                 list.innerHTML += `<div class="user-folder"><span>📂 <b>${u.fullName}</b></span><small style="color:var(--blue)">${u.role || 'student'}</small></div>`;
             });
-        } catch (e) { list.innerHTML = "Error loading."; }
+        }, err => {
+            list.innerHTML = "Error loading members. Try again.";
+        });
     }
 
     function closeSearchPopUp() { document.getElementById('search-results-popup').classList.add('hidden'); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active')); document.getElementById('t-'+t).classList.add('active'); document.querySelectorAll('.glass-card').forEach(s => s.classList.add('hidden')); document.getElementById(t+'-section').classList.remove('hidden'); }
-    function toggleM(id) { document.querySelectorAll('.dropdown-menu').forEach(m => { if(m.id !== id) m.classList.remove('show'); }); document.getElementById(id).classList.toggle('show'); }
+    function toggleM(id) { const menu = document.getElementById(id); const isShowing = menu.classList.contains('show'); document.querySelectorAll('.dropdown-menu').forEach(m => m.classList.remove('show')); if(!isShowing) menu.classList.add('show'); }
     async function approveNom(docId, bookId, collegeId, facName) { await db.collection("library_settings").doc(bookId).set({ recommendations: { [collegeId]: facName } }, { merge: true }); await db.collection("faculty_nominations").doc(docId).delete(); alert("Live!"); }
     async function updateField(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
     async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const doc = await ref.get(); let allowed = doc.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
